Add missing home logo to songs

--- a/songs/Amazing Grace.html
+++ b/songs/Amazing Grace.html
@@ -69,7 +69,7 @@ table {
   border-width: 1px;
   border-color: black;
   border-spacing: 0 auto;
-  
+
 }
 
 /* <!-- Sky chord chart: a table with rounded edges (SVG only) --> */
@@ -169,7 +169,7 @@ hr {
   opacity: 1;
   padding: 0;
   margin-top: 0px;
-  margin-bottom: 4px;   
+  margin-bottom: 4px;
 }
 
 svg line.divide {
@@ -179,13 +179,13 @@ svg line.divide {
 
 
 /* <!-- TODO: Check if this has no effect ??? --> */
-/* 
+/*
 path.instrument-button{
 	fill:#FF0000;
 	opacity:0.4;
 }
  */
- 
+
 /* <!-- TODO: Check if this has no effect ??? --> */
 #transcript {
   margin: 0 0;
@@ -198,7 +198,7 @@ path.instrument-button{
   opacity: 1.0;
 }*/
 
-/* 
+/*
 <svg class="note-root harp-button-0" xmlns="https://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg>
  */
@@ -327,11 +327,11 @@ Set to none to have a transparent SVG, and a transparent PNG with alpha layer (R
 Set to white to make the background white in RGB mode, and the PNG background white when converted to RGB
 --> */
 svg rect.harp-background {
-	fill:white;	
+	fill:white;
 }
 
 svg rect.note-background {
-	fill:white;	
+	fill:white;
 }
 
 /* <!-- Below the styles for buttons in a quaver --> */
@@ -415,7 +415,7 @@ svg rect.note-background {
 
 /* <!-- Button styles if chord has en broken --> */
 /* <!-- TODO: Check if this has no effect ??? --> */
-/* 
+/*
 .instrument-button-icon.silent {
   fill: red;
   stroke: red;
@@ -432,6 +432,18 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+
 <h1> Amazing Grace </h1>
 <p> <b>Original Artist(s):</b> John Newton</p>
 <p> <b>Transcript:</b>  Mimizan</p>
@@ -697,9 +709,9 @@ svg rect.note-background {
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td>A-</td></tr></table> <table class="voice"><tr><td>-maz</td></tr></table> <table class="voice"><tr><td>-ing</td></tr></table> <table class="voice"><tr><td>grace!</td></tr></table> <table class="voice"><tr><td>How</td></tr></table> <table class="voice"><tr><td>sweet</td></tr></table> <table class="voice"><tr><td>the</td></tr></table> <table class="voice"><tr><td>sound</td></tr></table> 
+<table class="voice"><tr><td>A-</td></tr></table> <table class="voice"><tr><td>-maz</td></tr></table> <table class="voice"><tr><td>-ing</td></tr></table> <table class="voice"><tr><td>grace!</td></tr></table> <table class="voice"><tr><td>How</td></tr></table> <table class="voice"><tr><td>sweet</td></tr></table> <table class="voice"><tr><td>the</td></tr></table> <table class="voice"><tr><td>sound</td></tr></table>
 <hr />
 <table class="harp harp-16 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -898,9 +910,9 @@ svg rect.note-background {
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td>that</td></tr></table> <table class="voice"><tr><td>saved</td></tr></table> <table class="voice"><tr><td>a</td></tr></table> <table class="voice"><tr><td>wretched</td></tr></table> <table class="voice"><tr><td>like</td></tr></table> <table class="voice"><tr><td>me!</td></tr></table> 
+<table class="voice"><tr><td>that</td></tr></table> <table class="voice"><tr><td>saved</td></tr></table> <table class="voice"><tr><td>a</td></tr></table> <table class="voice"><tr><td>wretched</td></tr></table> <table class="voice"><tr><td>like</td></tr></table> <table class="voice"><tr><td>me!</td></tr></table>
 <hr />
 <table class="harp harp-28 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1161,9 +1173,9 @@ svg rect.note-background {
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td>I</td></tr></table> <table class="voice"><tr><td>once</td></tr></table> <table class="voice"><tr><td>was</td></tr></table> <table class="voice"><tr><td>lost</td></tr></table> <table class="voice"><tr><td>But</td></tr></table> <table class="voice"><tr><td>now</td></tr></table> <table class="voice"><tr><td>I'm</td></tr></table> <table class="voice"><tr><td>found</td></tr></table> 
+<table class="voice"><tr><td>I</td></tr></table> <table class="voice"><tr><td>once</td></tr></table> <table class="voice"><tr><td>was</td></tr></table> <table class="voice"><tr><td>lost</td></tr></table> <table class="voice"><tr><td>But</td></tr></table> <table class="voice"><tr><td>now</td></tr></table> <table class="voice"><tr><td>I'm</td></tr></table> <table class="voice"><tr><td>found</td></tr></table>
 <hr />
 <table class="harp harp-44 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1362,9 +1374,9 @@ svg rect.note-background {
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td>was</td></tr></table> <table class="voice"><tr><td>blind</td></tr></table> <table class="voice"><tr><td>but</td></tr></table> <table class="voice"><tr><td>now</td></tr></table> <table class="voice"><tr><td>I</td></tr></table> <table class="voice"><tr><td>see</td></tr></table> 
+<table class="voice"><tr><td>was</td></tr></table> <table class="voice"><tr><td>blind</td></tr></table> <table class="voice"><tr><td>but</td></tr></table> <table class="voice"><tr><td>now</td></tr></table> <table class="voice"><tr><td>I</td></tr></table> <table class="voice"><tr><td>see</td></tr></table>
 </div>
 </body>
 </html>
