--- a/songs/Hey Jude.html
+++ b/songs/Hey Jude.html
@@ -5,6 +5,18 @@
 <link href="../css/main.css" rel="stylesheet" />
 <meta charset="utf-8"/></head>
 <body>
+
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+
 <h1> Hey Jude </h1>
 <p> <b>Original Artist(s):</b> Lennon & McCartney </p>
 <p> <b>Transcript:</b> mimizan </p>
@@ -511,9 +523,9 @@
 <svg x="0" y="0" class="note-diamond unhighlighted harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root unhighlighted harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td align="center">Hey</td></tr></table> <table class="voice"><tr><td align="center">Jude</td></tr></table> <table class="voice"><tr><td align="center">,</td></tr></table> <table class="voice"><tr><td align="center">don't</td></tr></table> <table class="voice"><tr><td align="center">make</td></tr></table> <table class="voice"><tr><td align="center">it</td></tr></table> <table class="voice"><tr><td align="center">bad</td></tr></table> <table class="voice"><tr><td align="center">, take a</td></tr></table> <table class="voice"><tr><td align="center">sad</td></tr></table> <table class="voice"><tr><td align="center">song</td></tr></table> <table class="voice"><tr><td align="center">and</td></tr></table> <table class="voice"><tr><td align="center">make</td></tr></table> <table class="voice"><tr><td align="center">it better</td></tr></table> 
+<table class="voice"><tr><td align="center">Hey</td></tr></table> <table class="voice"><tr><td align="center">Jude</td></tr></table> <table class="voice"><tr><td align="center">,</td></tr></table> <table class="voice"><tr><td align="center">don't</td></tr></table> <table class="voice"><tr><td align="center">make</td></tr></table> <table class="voice"><tr><td align="center">it</td></tr></table> <table class="voice"><tr><td align="center">bad</td></tr></table> <table class="voice"><tr><td align="center">, take a</td></tr></table> <table class="voice"><tr><td align="center">sad</td></tr></table> <table class="voice"><tr><td align="center">song</td></tr></table> <table class="voice"><tr><td align="center">and</td></tr></table> <table class="voice"><tr><td align="center">make</td></tr></table> <table class="voice"><tr><td align="center">it better</td></tr></table>
 <hr />
 <table class="harp harp-29 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -706,9 +718,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td align="center">Re-</td></tr></table> <table class="voice"><tr><td align="center">-mem</td></tr></table> <table class="voice"><tr><td align="center">ber</td></tr></table> <table class="voice"><tr><td align="center">,</td></tr></table> <table class="voice"><tr><td align="center">to</td></tr></table> <table class="voice"><tr><td align="center">let her into</td></tr></table> <table class="voice"><tr><td align="center">your</td></tr></table> <table class="voice"><tr><td align="center">heart</td></tr></table> 
+<table class="voice"><tr><td align="center">Re-</td></tr></table> <table class="voice"><tr><td align="center">-mem</td></tr></table> <table class="voice"><tr><td align="center">ber</td></tr></table> <table class="voice"><tr><td align="center">,</td></tr></table> <table class="voice"><tr><td align="center">to</td></tr></table> <table class="voice"><tr><td align="center">let her into</td></tr></table> <table class="voice"><tr><td align="center">your</td></tr></table> <table class="voice"><tr><td align="center">heart</td></tr></table>
 <hr />
 <table class="harp harp-43 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -963,9 +975,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td align="center">Then you can</td></tr></table> <table class="voice"><tr><td align="center">start</td></tr></table> <table class="voice"><tr><td align="center"></td></tr></table> <table class="voice"><tr><td align="center">to</td></tr></table> <table class="voice"><tr><td align="center">make</td></tr></table> <table class="voice"><tr><td align="center">it</td></tr></table> <table class="voice"><tr><td align="center">bet-</td></tr></table> <table class="voice"><tr><td align="center">-ter.</td></tr></table> 
+<table class="voice"><tr><td align="center">Then you can</td></tr></table> <table class="voice"><tr><td align="center">start</td></tr></table> <table class="voice"><tr><td align="center"></td></tr></table> <table class="voice"><tr><td align="center">to</td></tr></table> <table class="voice"><tr><td align="center">make</td></tr></table> <table class="voice"><tr><td align="center">it</td></tr></table> <table class="voice"><tr><td align="center">bet-</td></tr></table> <table class="voice"><tr><td align="center">-ter.</td></tr></table>
 <hr />
 <table class="harp harp-59 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1433,9 +1445,9 @@
 <svg x="0" y="0" class="note-diamond unhighlighted harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root unhighlighted harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td align="center">And</td></tr></table> <table class="voice"><tr><td align="center">an-</td></tr></table> <table class="voice"><tr><td align="center">-y</td></tr></table> <table class="voice"><tr><td align="center">time</td></tr></table> <table class="voice"><tr><td align="center">you</td></tr></table> <table class="voice"><tr><td align="center">feel</td></tr></table> <table class="voice"><tr><td align="center">the</td></tr></table> <table class="voice"><tr><td align="center">pain</td></tr></table> <table class="voice"><tr><td align="center">,</td></tr></table> <table class="voice"><tr><td align="center">hey</td></tr></table> <table class="voice"><tr><td align="center">Jude</td></tr></table> <table class="voice"><tr><td align="center">,</td></tr></table> <table class="voice"><tr><td align="center">re</td></tr></table> <table class="voice"><tr><td align="center">frain</td></tr></table> 
+<table class="voice"><tr><td align="center">And</td></tr></table> <table class="voice"><tr><td align="center">an-</td></tr></table> <table class="voice"><tr><td align="center">-y</td></tr></table> <table class="voice"><tr><td align="center">time</td></tr></table> <table class="voice"><tr><td align="center">you</td></tr></table> <table class="voice"><tr><td align="center">feel</td></tr></table> <table class="voice"><tr><td align="center">the</td></tr></table> <table class="voice"><tr><td align="center">pain</td></tr></table> <table class="voice"><tr><td align="center">,</td></tr></table> <table class="voice"><tr><td align="center">hey</td></tr></table> <table class="voice"><tr><td align="center">Jude</td></tr></table> <table class="voice"><tr><td align="center">,</td></tr></table> <table class="voice"><tr><td align="center">re</td></tr></table> <table class="voice"><tr><td align="center">frain</td></tr></table>
 <hr />
 <table class="harp harp-88 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1721,9 +1733,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td align="center">don't</td></tr></table> <table class="voice"><tr><td align="center">car-</td></tr></table> <table class="voice"><tr><td align="center">-ry</td></tr></table> <table class="voice"><tr><td align="center">the</td></tr></table> <table class="voice"><tr><td align="center">world</td></tr></table> <table class="voice"><tr><td align="center">,</td></tr></table> <table class="voice"><tr><td align="center">up-</td></tr></table> <table class="voice"><tr><td align="center">-on</td></tr></table> <table class="voice"><tr><td align="center">your shoulders</td></tr></table> 
+<table class="voice"><tr><td align="center">don't</td></tr></table> <table class="voice"><tr><td align="center">car-</td></tr></table> <table class="voice"><tr><td align="center">-ry</td></tr></table> <table class="voice"><tr><td align="center">the</td></tr></table> <table class="voice"><tr><td align="center">world</td></tr></table> <table class="voice"><tr><td align="center">,</td></tr></table> <table class="voice"><tr><td align="center">up-</td></tr></table> <table class="voice"><tr><td align="center">-on</td></tr></table> <table class="voice"><tr><td align="center">your shoulders</td></tr></table>
 <hr />
 <table class="harp harp-106 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -2191,9 +2203,9 @@
 <svg x="0" y="0" class="note-diamond unhighlighted harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root unhighlighted harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td align="center">For</td></tr></table> <table class="voice"><tr><td align="center">well</td></tr></table> <table class="voice"><tr><td align="center">you</td></tr></table> <table class="voice"><tr><td align="center">know</td></tr></table> <table class="voice"><tr><td align="center">that</td></tr></table> <table class="voice"><tr><td align="center">it's</td></tr></table> <table class="voice"><tr><td align="center">a</td></tr></table> <table class="voice"><tr><td align="center">fool</td></tr></table> <table class="voice"><tr><td align="center">,</td></tr></table> <table class="voice"><tr><td align="center">who</td></tr></table> <table class="voice"><tr><td align="center">plays</td></tr></table> <table class="voice"><tr><td align="center"></td></tr></table> <table class="voice"><tr><td align="center">it</td></tr></table> <table class="voice"><tr><td align="center">cool</td></tr></table> 
+<table class="voice"><tr><td align="center">For</td></tr></table> <table class="voice"><tr><td align="center">well</td></tr></table> <table class="voice"><tr><td align="center">you</td></tr></table> <table class="voice"><tr><td align="center">know</td></tr></table> <table class="voice"><tr><td align="center">that</td></tr></table> <table class="voice"><tr><td align="center">it's</td></tr></table> <table class="voice"><tr><td align="center">a</td></tr></table> <table class="voice"><tr><td align="center">fool</td></tr></table> <table class="voice"><tr><td align="center">,</td></tr></table> <table class="voice"><tr><td align="center">who</td></tr></table> <table class="voice"><tr><td align="center">plays</td></tr></table> <table class="voice"><tr><td align="center"></td></tr></table> <table class="voice"><tr><td align="center">it</td></tr></table> <table class="voice"><tr><td align="center">cool</td></tr></table>
 <hr />
 <table class="harp harp-135 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -2358,9 +2370,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td align="center">By</td></tr></table> <table class="voice"><tr><td align="center">making his world</td></tr></table> <table class="voice"><tr><td align="center"></td></tr></table> <table class="voice"><tr><td align="center">a</td></tr></table> <table class="voice"><tr><td align="center">little coolder</td></tr></table> 
+<table class="voice"><tr><td align="center">By</td></tr></table> <table class="voice"><tr><td align="center">making his world</td></tr></table> <table class="voice"><tr><td align="center"></td></tr></table> <table class="voice"><tr><td align="center">a</td></tr></table> <table class="voice"><tr><td align="center">little coolder</td></tr></table>
 <hr />
 <table class="harp harp-145 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -2644,9 +2656,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td align="center">na</td></tr></table> <table class="voice"><tr><td align="center">na</td></tr></table> <table class="voice"><tr><td align="center">na</td></tr></table> <table class="voice"><tr><td align="center">na</td></tr></table> <table class="voice"><tr><td align="center">,</td></tr></table> <table class="voice"><tr><td align="center">na</td></tr></table> <table class="voice"><tr><td align="center">,</td></tr></table> <table class="voice"><tr><td align="center">na</td></tr></table> <table class="voice"><tr><td align="center">na</td></tr></table> <table class="voice"><tr><td align="center">na</td></tr></table> <table class="voice"><tr><td align="center">na</td></tr></table> <table class="voice"><tr><td align="center">na</td></tr></table> 
+<table class="voice"><tr><td align="center">na</td></tr></table> <table class="voice"><tr><td align="center">na</td></tr></table> <table class="voice"><tr><td align="center">na</td></tr></table> <table class="voice"><tr><td align="center">na</td></tr></table> <table class="voice"><tr><td align="center">,</td></tr></table> <table class="voice"><tr><td align="center">na</td></tr></table> <table class="voice"><tr><td align="center">,</td></tr></table> <table class="voice"><tr><td align="center">na</td></tr></table> <table class="voice"><tr><td align="center">na</td></tr></table> <table class="voice"><tr><td align="center">na</td></tr></table> <table class="voice"><tr><td align="center">na</td></tr></table> <table class="voice"><tr><td align="center">na</td></tr></table>
 </div>
 </body>
 </html>
