--- a/songs/Let it be.html
+++ b/songs/Let it be.html
@@ -69,7 +69,7 @@ table {
   border-width: 1px;
   border-color: black;
   border-spacing: 0 auto;
-  
+
 }
 
 /* <!-- Sky chord chart: a table with rounded edges (SVG only) --> */
@@ -169,7 +169,7 @@ hr {
   opacity: 1;
   padding: 0;
   margin-top: 0px;
-  margin-bottom: 4px;   
+  margin-bottom: 4px;
 }
 
 svg line.divide {
@@ -179,13 +179,13 @@ svg line.divide {
 
 
 /* <!-- TODO: Check if this has no effect ??? --> */
-/* 
+/*
 path.instrument-button{
 	fill:#FF0000;
 	opacity:0.4;
 }
  */
- 
+
 /* <!-- TODO: Check if this has no effect ??? --> */
 #transcript {
   margin: 0 0;
@@ -198,7 +198,7 @@ path.instrument-button{
   opacity: 1.0;
 }*/
 
-/* 
+/*
 <svg class="note-root harp-button-0" xmlns="https://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg>
  */
@@ -327,11 +327,11 @@ Set to none to have a transparent SVG, and a transparent PNG with alpha layer (R
 Set to white to make the background white in RGB mode, and the PNG background white when converted to RGB
 --> */
 svg rect.harp-background {
-	fill:white;	
+	fill:white;
 }
 
 svg rect.note-background {
-	fill:white;	
+	fill:white;
 }
 
 /* <!-- Below the styles for buttons in a quaver --> */
@@ -415,7 +415,7 @@ svg rect.note-background {
 
 /* <!-- Button styles if chord has en broken --> */
 /* <!-- TODO: Check if this has no effect ??? --> */
-/* 
+/*
 .instrument-button-icon.silent {
   fill: red;
   stroke: red;
@@ -432,6 +432,18 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+  
 <h1> Let it be </h1>
 <p> <b>Original Artist(s):</b> Lennon & McCartney </p>
 <p> <b>Transcript:</b> mimizan </p>
@@ -697,9 +709,9 @@ svg rect.note-background {
 <svg x="0" y="0" class="note-diamond unhighlighted harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root unhighlighted harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td>When</td></tr></table> <table class="voice"><tr><td>I find</td></tr></table> <table class="voice"><tr><td>myself</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>in time</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>of trouble</td></tr></table> 
+<table class="voice"><tr><td>When</td></tr></table> <table class="voice"><tr><td>I find</td></tr></table> <table class="voice"><tr><td>myself</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>in time</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>of trouble</td></tr></table>
 <hr />
 <table class="harp harp-15 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -957,9 +969,9 @@ svg rect.note-background {
 <svg x="0" y="0" class="note-diamond unhighlighted harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root unhighlighted harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td>Mother</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>Mary</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>comes</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>to me</td></tr></table> 
+<table class="voice"><tr><td>Mother</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>Mary</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>comes</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>to me</td></tr></table>
 <hr />
 <table class="harp harp-30 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1215,9 +1227,9 @@ svg rect.note-background {
 <svg x="0" y="0" class="note-diamond unhighlighted harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root unhighlighted harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td>speaking</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>words</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>of wisdom</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>let it</td></tr></table> 
+<table class="voice"><tr><td>speaking</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>words</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>of wisdom</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>let it</td></tr></table>
 <hr />
 <table class="harp harp-45 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1351,9 +1363,9 @@ svg rect.note-background {
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td>be</td></tr></table> 
+<table class="voice"><tr><td>be</td></tr></table>
 <hr />
 <table class="harp harp-50 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1734,9 +1746,9 @@ svg rect.note-background {
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td>let it be</td></tr></table> <table class="voice"><tr><td>let it be</td></tr></table> <table class="voice"><tr><td>let it be</td></tr></table> <table class="voice"><tr><td>let it be</td></tr></table> 
+<table class="voice"><tr><td>let it be</td></tr></table> <table class="voice"><tr><td>let it be</td></tr></table> <table class="voice"><tr><td>let it be</td></tr></table> <table class="voice"><tr><td>let it be</td></tr></table>
 <hr />
 <table class="harp harp-66 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1992,9 +2004,9 @@ svg rect.note-background {
 <svg x="0" y="0" class="note-diamond unhighlighted harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root unhighlighted harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td>there</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>will be</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>an answer</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>let it</td></tr></table> 
+<table class="voice"><tr><td>there</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>will be</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>an answer</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>let it</td></tr></table>
 <hr />
 <table class="harp harp-81 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -2128,9 +2140,9 @@ svg rect.note-background {
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td>be</td></tr></table> 
+<table class="voice"><tr><td>be</td></tr></table>
 </div>
 </body>
 </html>
