--- a/songs/Super Mario (simple version).html
+++ b/songs/Super Mario (simple version).html
@@ -2,6 +2,18 @@
 <html>
 <head> <title>Super Mario (simple version)</title> <link href="../css/main.css" rel="stylesheet" /> <meta charset="utf-8"/> </head>
 <body>
+
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+  
 <h1> Super Mario (simple version) </h1>
 <p> <b>Original Artist(s):</b> Koji Kondo (Nintendo) </p>
 <p> <b> Transcript:</b> Ikina </p>
