--- a/songs/Yellow Submarine.html
+++ b/songs/Yellow Submarine.html
@@ -69,7 +69,7 @@ table {
   border-width: 1px;
   border-color: black;
   border-spacing: 0 auto;
-  
+
 }
 
 /* <!-- Sky chord chart: a table with rounded edges (SVG only) --> */
@@ -169,7 +169,7 @@ hr {
   opacity: 1;
   padding: 0;
   margin-top: 0px;
-  margin-bottom: 4px;   
+  margin-bottom: 4px;
 }
 
 svg line.divide {
@@ -179,13 +179,13 @@ svg line.divide {
 
 
 /* <!-- TODO: Check if this has no effect ??? --> */
-/* 
+/*
 path.instrument-button{
 	fill:#FF0000;
 	opacity:0.4;
 }
  */
- 
+
 /* <!-- TODO: Check if this has no effect ??? --> */
 #transcript {
   margin: 0 0;
@@ -198,7 +198,7 @@ path.instrument-button{
   opacity: 1.0;
 }*/
 
-/* 
+/*
 <svg class="note-root harp-button-0" xmlns="https://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg>
  */
@@ -327,11 +327,11 @@ Set to none to have a transparent SVG, and a transparent PNG with alpha layer (R
 Set to white to make the background white in RGB mode, and the PNG background white when converted to RGB
 --> */
 svg rect.harp-background {
-	fill:white;	
+	fill:white;
 }
 
 svg rect.note-background {
-	fill:white;	
+	fill:white;
 }
 
 /* <!-- Below the styles for buttons in a quaver --> */
@@ -415,7 +415,7 @@ svg rect.note-background {
 
 /* <!-- Button styles if chord has en broken --> */
 /* <!-- TODO: Check if this has no effect ??? --> */
-/* 
+/*
 .instrument-button-icon.silent {
   fill: red;
   stroke: red;
@@ -432,6 +432,17 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+  
 <h1> Yellow Submarine </h1>
 <p> <b>Original Artist(s):</b> McCartney </p>
 <p> <b>Transcript:</b> mimizan </p>
@@ -996,9 +1007,9 @@ svg rect.note-background {
 <svg x="0" y="0" class="note-diamond unhighlighted harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root unhighlighted harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td>In the town</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>where</td></tr></table> <table class="voice"><tr><td>I</td></tr></table> <table class="voice"><tr><td>was</td></tr></table> <table class="voice"><tr><td>born</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>li-</td></tr></table> <table class="voice"><tr><td>-ved</td></tr></table> <table class="voice"><tr><td>a</td></tr></table> <table class="voice"><tr><td>man</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>who</td></tr></table> <table class="voice"><tr><td>sailed</td></tr></table> <table class="voice"><tr><td>to</td></tr></table> <table class="voice"><tr><td>sea</td></tr></table> 
+<table class="voice"><tr><td>In the town</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>where</td></tr></table> <table class="voice"><tr><td>I</td></tr></table> <table class="voice"><tr><td>was</td></tr></table> <table class="voice"><tr><td>born</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>li-</td></tr></table> <table class="voice"><tr><td>-ved</td></tr></table> <table class="voice"><tr><td>a</td></tr></table> <table class="voice"><tr><td>man</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>who</td></tr></table> <table class="voice"><tr><td>sailed</td></tr></table> <table class="voice"><tr><td>to</td></tr></table> <table class="voice"><tr><td>sea</td></tr></table>
 <hr />
 <table class="harp harp-34 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1557,9 +1568,9 @@ svg rect.note-background {
 <svg x="0" y="0" class="note-diamond unhighlighted harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root unhighlighted harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td>And he told</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>us</td></tr></table> <table class="voice"><tr><td>of</td></tr></table> <table class="voice"><tr><td>his</td></tr></table> <table class="voice"><tr><td>life</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>in</td></tr></table> <table class="voice"><tr><td>the land</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td></td></tr></table><table class="voice"><tr><td></td></tr></table><table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>of</td></tr></table> <table class="voice"><tr><td>sub</td></tr></table> <table class="voice"><tr><td>mar-</td></tr></table> <table class="voice"><tr><td>-rines</td></tr></table> 
+<table class="voice"><tr><td>And he told</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>us</td></tr></table> <table class="voice"><tr><td>of</td></tr></table> <table class="voice"><tr><td>his</td></tr></table> <table class="voice"><tr><td>life</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>in</td></tr></table> <table class="voice"><tr><td>the land</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td></td></tr></table><table class="voice"><tr><td></td></tr></table><table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>of</td></tr></table> <table class="voice"><tr><td>sub</td></tr></table> <table class="voice"><tr><td>mar-</td></tr></table> <table class="voice"><tr><td>-rines</td></tr></table>
 <hr />
 <table class="harp harp-67 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1684,9 +1695,9 @@ svg rect.note-background {
 <svg x="0" y="0" class="note-diamond unhighlighted harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root unhighlighted harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td>We all live in</td></tr></table> <table class="voice"><tr><td>a</td></tr></table> <table class="voice"><tr><td>yellow submarine</td></tr></table> 
+<table class="voice"><tr><td>We all live in</td></tr></table> <table class="voice"><tr><td>a</td></tr></table> <table class="voice"><tr><td>yellow submarine</td></tr></table>
 <hr />
 <table class="harp harp-75 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1780,9 +1791,9 @@ svg rect.note-background {
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table><table class="harp-77 repeat"><tr><td>x5</td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table><table class="harp-77 repeat"><tr><td>x5</td></tr></table>
 <br />
-<table class="voice"><tr><td>yellow submarine</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>yellow submarine</td></tr></table> 
+<table class="voice"><tr><td>yellow submarine</td></tr></table> <table class="voice"><tr><td></td></tr></table> <table class="voice"><tr><td>yellow submarine</td></tr></table>
 </div>
 </body>
 </html>
