--- a/songs/Yesterday.html
+++ b/songs/Yesterday.html
@@ -5,6 +5,17 @@
 <link href="../css/main.css" rel="stylesheet" />
 <meta charset="utf-8"/></head>
 <body>
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+  
 <h1> Yesterday </h1>
 <p> <b>Original Artist(s):</b> McCartney </p>
 <p> <b>Transcript:</b> mimizan </p>
@@ -295,9 +306,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">Yes-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ter-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-day</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">,</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">all my troubles seem so</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">far</td></tr></table> <table class="voice"><tr><td  width="102em" align="center"></td></tr></table> <table class="voice"><tr><td  width="102em" align="center">a-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-way</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">Yes-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ter-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-day</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">,</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">all my troubles seem so</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">far</td></tr></table> <table class="voice"><tr><td  width="102em" align="center"></td></tr></table> <table class="voice"><tr><td  width="102em" align="center">a-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-way</td></tr></table>
 <hr />
 <table class="harp harp-18 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -460,9 +471,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">now</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">it looks as if they're</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">here</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">to</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">stay</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">now</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">it looks as if they're</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">here</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">to</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">stay</td></tr></table>
 <hr />
 <table class="harp harp-28 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -712,9 +723,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">oh</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">I</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">be-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-lieve</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">in</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">yes-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ter-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-day</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">oh</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">I</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">be-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-lieve</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">in</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">yes-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ter-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-day</td></tr></table>
 <hr />
 <table class="harp harp-44 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -997,9 +1008,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">why</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">she</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">had</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">to</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">go</td></tr></table> <table class="voice"><tr><td  width="102em" align="center"></td></tr></table> <table class="voice"><tr><td  width="102em" align="center">I</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">don’t</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">know</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">why</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">she</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">had</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">to</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">go</td></tr></table> <table class="voice"><tr><td  width="102em" align="center"></td></tr></table> <table class="voice"><tr><td  width="102em" align="center">I</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">don’t</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">know</td></tr></table>
 <hr />
 <table class="harp harp-62 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1127,9 +1138,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">she</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">would</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">’nt</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">say</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">she</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">would</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">’nt</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">say</td></tr></table>
 <hr />
 <table class="harp harp-70 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1318,9 +1329,9 @@
 <svg x="0" y="0" class="note-diamond unhighlighted harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root unhighlighted harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">I</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">said</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">some-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-thing</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">wrong</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">,</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">I</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">said</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">some-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-thing</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">wrong</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">,</td></tr></table>
 <hr />
 <table class="harp harp-82 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1634,9 +1645,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">now</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">I</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">long</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">for</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">yes-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ter</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-day</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">now</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">I</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">long</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">for</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">yes-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ter</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-day</td></tr></table>
 <hr />
 <table class="harp harp-99 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1825,9 +1836,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">oh</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">I</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">be-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-lieve</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">in</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">yes-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ter-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-day</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">oh</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">I</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">be-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-lieve</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">in</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">yes-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ter-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-day</td></tr></table>
 <hr />
 <table class="harp harp-113 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -2046,9 +2057,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">mm</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">mm</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">mm</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">mm</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">mm</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">mm</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">mm</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">mm</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">mm</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">mm</td></tr></table>
 </div>
 </body>
 </html>
