--- a/songs/i-was-born-for-this.html
+++ b/songs/i-was-born-for-this.html
@@ -2,6 +2,18 @@
 <html>
 <head> <title>I Was Born For This (Journey)</title> <link href="../css/older_main.css" rel="stylesheet" /> </head>
 <body>
+
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+
 <h1> I Was Born For This (Journey) </h1>
 <p> <b>Original Artist(s):</b> Austin Wintory </p>
 <p> <b> Transcript:</b> Tracey </p>
