--- a/songs/journey-theme.html
+++ b/songs/journey-theme.html
@@ -2,6 +2,18 @@
 <html>
 <head> <title>Journey Theme</title> <link href="../css/minimal-styling.css" rel="stylesheet" /> </head>
 <body>
+
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+
 <h1> Journey Theme </h1>
 
 <p>
