--- a/songs/Eleanor Rigby.html
+++ b/songs/Eleanor Rigby.html
@@ -5,6 +5,18 @@
 <link href="../css/main.css" rel="stylesheet" />
 <meta charset="utf-8"/></head>
 <body>
+
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+
 <h1> Eleanor Rigby </h1>
 <p> <b>Original Artist(s):</b> Lennon & McCartney </p>
 <p> <b>Transcript:</b> mimizan </p>
@@ -12,7 +24,7 @@
 <div id="transcript">
 
 <br />
-<table class="voice"><tr><td  width="102em" align="center">==2 times:==</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">==2 times:==</td></tr></table>
 <hr />
 <table class="harp harp-1 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -206,9 +218,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">ha</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">,</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">look at all</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">the lonely</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">peo-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ple</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">ha</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">,</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">look at all</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">the lonely</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">peo-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ple</td></tr></table>
 <hr />
 <table class="harp harp-13 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -524,11 +536,11 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">(instru)</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">(instru)</td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">==verse:==</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">==verse:==</td></tr></table>
 <hr />
 <table class="harp harp-25 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -685,9 +697,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">El-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ea-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-nor</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">Rig-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-by</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">El-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ea-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-nor</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">Rig-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-by</td></tr></table>
 <hr />
 <table class="harp harp-35 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -974,9 +986,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">Picks</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">up</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">the</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">rice in the</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">church where a</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">wed-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ding</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">has</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">been</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">Picks</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">up</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">the</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">rice in the</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">church where a</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">wed-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ding</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">has</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">been</td></tr></table>
 <hr />
 <table class="harp harp-53 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1074,9 +1086,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">Lives</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">in a dre-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-am</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">Lives</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">in a dre-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-am</td></tr></table>
 <hr />
 <table class="harp harp-59 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1173,9 +1185,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">Waits at the</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">win</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-dow</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">Waits at the</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">win</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-dow</td></tr></table>
 <hr />
 <table class="harp harp-65 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1402,9 +1414,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">Wearing the</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">face that she</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">keeps in a</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">jar</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">by</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">the</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">door</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">Wearing the</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">face that she</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">keeps in a</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">jar</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">by</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">the</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">door</td></tr></table>
 <hr />
 <table class="harp harp-79 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1502,11 +1514,11 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">who</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">is it for</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">?</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">who</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">is it for</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">?</td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">==Bridge:==</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">==Bridge:==</td></tr></table>
 <hr />
 <table class="harp harp-86 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1694,9 +1706,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">all</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">the</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">lone-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ly</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">peo-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ple</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">all</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">the</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">lone-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ly</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">peo-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ple</td></tr></table>
 <hr />
 <table class="harp harp-98 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1884,9 +1896,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">where</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">do</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">they</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">all</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">come</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">from?</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">where</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">do</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">they</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">all</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">come</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">from?</td></tr></table>
 <hr />
 <table class="harp harp-110 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -2074,9 +2086,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">all</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">the</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">lone-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ly</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">peo-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ple</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">all</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">the</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">lone-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ly</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">peo-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-ple</td></tr></table>
 <hr />
 <table class="harp harp-122 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -2264,9 +2276,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">where</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">do</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">they</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">all</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">be-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-long?</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">where</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">do</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">they</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">all</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">be-</td></tr></table> <table class="voice"><tr><td  width="102em" align="center">-long?</td></tr></table>
 </div>
 </body>
 </html>
