--- a/songs/Empty Town.html
+++ b/songs/Empty Town.html
@@ -3,13 +3,25 @@
 <head> <title>Empty Town</title> <link href="../css/older_main.css" rel="stylesheet" /> </head>
 <body>
 <h1> Empty Town </h1>
+
+<table id="navigation">
+  <tr>
+    <td>
+      <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+    </td>
+    <td>
+      <h1><a href="../index.html">Sky Music</a></h1>
+    </td>
+  </tr>
+</table>
+
 <p> <b>Original Artist(s):</b> Toby Fox </p>
 <p> <b> Transcript:</b> Mirianimamura </p>
-  
+
 <p>
 <a href="../" > Go Home </a>
 </p>
-  
+
 <div id="transcript">
 
 <table class="harp harp-0"><tr><td><svg class="note-root harp-button-0 " xmlns="https://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 91 91">
