--- a/songs/Ode to Joy.html
+++ b/songs/Ode to Joy.html
@@ -5,6 +5,18 @@
 <link href="../css/main.css" rel="stylesheet" />
 <meta charset="utf-8"/></head>
 <body>
+
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+  
 <h1> Ode to Joy </h1>
 <p> <b>Original Artist(s):</b> Beethoven </p>
 <p> <b>Transcript:</b> mimizan </p>
@@ -12,7 +24,7 @@
 <div id="transcript">
 
 <br />
-<table class="voice"><tr><td  width="102em" align="center">1</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">1</td></tr></table>
 <hr />
 <table class="harp harp-2 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -271,9 +283,9 @@
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
-<table class="harp-9 repeat"><tr><td>x2</td></tr></table> 
+<table class="harp-9 repeat"><tr><td>x2</td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">2</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">2</td></tr></table>
 <hr />
 <table class="harp harp-11 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -562,9 +574,9 @@
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
-<table class="harp-19 repeat"><tr><td>x2</td></tr></table> 
+<table class="harp-19 repeat"><tr><td>x2</td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">3</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">3</td></tr></table>
 <hr />
 <table class="harp harp-21 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -945,9 +957,9 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 <br />
-<table class="voice"><tr><td  width="102em" align="center">Same as 2</td></tr></table> 
+<table class="voice"><tr><td  width="102em" align="center">Same as 2</td></tr></table>
 <hr />
 <table class="harp harp-34 "><tr><td>
 <svg x="0" y="0" class="note-root harp-button-0" width="1em" height="1em" viewBox="0 0 91 91">
@@ -1235,7 +1247,7 @@
 <svg x="0" y="0" class="note-diamond harp-button-13" width="1em" height="1em" viewBox="0 0 91 91">
 <circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td><td>
 <svg x="0" y="0" class="note-root harp-button-14" width="1em" height="1em" viewBox="0 0 91 91">
-<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table> 
+<circle cx="45.4" cy="45.4" r="12" class="instrument-button-icon unhighlighted"/></svg></td></tr></table>
 </div>
 </body>
 </html>
