--- a/songs/road-of-trials-intro.html
+++ b/songs/road-of-trials-intro.html
@@ -2,6 +2,18 @@
 <html>
 <head> <title> Road of Trials (Intro)</title> <link href="../css/older_main.css" rel="stylesheet" /> </head>
 <body>
+
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+  
 <h1> Road of Trials (Intro) </h1>
 
 <p>
@@ -9,10 +21,6 @@
 </p>
 <p>
   <b>Transcript:</b> Tracey.
-</p>
-
-<p>
-<a href="../" > Go Home </a>
 </p>
 
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/5oxiBDLGx6A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
