--- a/songs/threshold-bass.html
+++ b/songs/threshold-bass.html
@@ -2,15 +2,24 @@
 <html>
 <head> <title>Threshold (Bass)</title> <link href="../css/older_main.css" rel="stylesheet" /> </head>
 <body>
+
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/sky-music-logo.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+  
 <h1> Threshold (Bass Intro) &ndash; Journey OST </h1>
 <p> <b>Original Artist(s):</b> Austin Wintory </p>
 <p> <b> Transcript:</b> Tracey </p>
 <p> <b> Recommended key:</b> E major </p>
 <div id="transcript">
 
-<p>
-<a href="../" > Go Home </a>
-</p>
 
 <p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/hMBSIo_a96o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
